# Tools

./: CHANGELOG.md  CMakeLists.txt  README.md
block_solver/: CMakeLists.txt  block_solver.cpp  common_utils.h  makefile
chgcfg/: CMakeLists.txt  chgcfg.cpp  makefile
cmake/: completion.bash.in  completion.zsh.in
investment_solver/: CMakeLists.txt  InvestmentBlock.cpp  InvestmentBlock.h  InvestmentFunction.cpp  InvestmentFunction.h  investment_solver.cpp  makefile  makefile-IB
sddp_solver/: CMakeLists.txt  CutProcessing.cpp  CutProcessing.h  SDDPBlockSolutionOutput.h  makefile  sddp_greedy_solver.cpp  sddp_solver.cpp
sddp_solver/br/config/: BSPar-LD.txt  HSUBSCfg.txt  LPBSCfg.txt  OUBSCfg.txt  TUBSCfg.txt  sddp_solver-ld.txt  sddp_solver.txt  uc_solverconfig.txt
sddp_solver/test/config/: BSPar-LD.txt  HSUBSCfg.txt  LPBSCfg.txt  OUBSCfg.txt  TUBSCfg.txt  sddp_solver-ld.txt  sddp_solver.txt  uc_solverconfig.txt
ucblock_solver/: BSPar-CPX.txt  BSPar-LD.txt  CMakeLists.txt  LPBSCfg.txt  UCBlockSolutionOutput.h  makefile  uc_solverconfig.txt  ucblock_solver.cpp  ucblock_utils.h
